--- a/public/index.html
+++ b/public/index.html
@@ -13,16 +13,126 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
    
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+   <style>
+     .App {
+  display: flex;
+  flex-direction: row;
+  background: #000000fb;
+  color: white;
+   padding-left: 130px;
+   padding-right: 130px;
+   padding-top: 30PX;
+   padding-bottom: 30PX;
+}
+.skills {
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+	height: 25px;
+  color: white;
+}
+.text{
+  padding-left: 30px;
+  
+}
+.textName{
+  padding-left: 100px;
+  
+}
+.skills .language  {
+  display: inline-block;
+  width: 150px;
+}
+.star {
+  display: inline-block;
+  color:  #55ddfc;
+}
+.socialIcon {
+padding: 8px;
+  color:  #55ddfc;
+  font-size: 40px;
+  }
+.socialIcon1 {
+    color:  #55ddfc;
+    font-size: 110px;
+    
+    }
+.title {
+    padding-bottom: 10px;
+    border-bottom: 5px solid #55ddfc;
+}
+.App-logo {
+ width: 460px;
+ height: 370px;
+ padding-left: 120px;
+ justify-content: center;
+}
+
+.pig {
+  width: 150px;
+  height: 140px;
+ }
+.app-left{
+  padding-left: 40px;
+  width: 45%;
+}
+.app-right{
+  padding-left: 40px;
+ width:  55%;
+}
+.flex-container{
+  display:flex;
+  justify-content: space-around;
+
+}
+@media (max-width: 768 px){
+.App {
+  display: flex;
+  flex-direction: column;
+}
+}
+
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+.navbar {
+  align-items: center;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 12px; 
+  letter-spacing: 5px;
+  justify-content: center;
+  background: #4d4e77fd;
+  color: white;
+}
+.App-link {
+  color: #61dafb;
+}
+.aaa {
+  padding-top: 20px;
+padding-bottom: 20px; 
+letter-spacing: 5px;
+background: #4d4e77fd;
+color: white; 
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+   </style>
+ 
   </head>
   <body>
       <nav class="navbar  text-cente">
@@ -37,7 +147,7 @@
 
       <br></br>
       <div className="app-left">
-        <img src={logo} className="App-logo" alt="logo" />
+        <img src="77386.jpg" className="App-logo" alt="logo" />
         <br></br>
         <h1 className="textName">Suchanya Roekplian</h1>
         <br></br>
